small margin update, fix currentPost bleeding out of webpage

--- a/src/scss/CurrentPost.scss
+++ b/src/scss/CurrentPost.scss
@@ -37,8 +37,7 @@
         padding: 16px 0px 16px 0px;
     }
     .innerContainer {
-        margin-left: 20px;
-        margin-right: 20px;
+        margin-left: 15px;
         box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
     }
 }
